--- a/src/app/transactions/overview/overview-categorized/overview-categorized.component.scss
+++ b/src/app/transactions/overview/overview-categorized/overview-categorized.component.scss
@@ -9,11 +9,6 @@
 
     app-svg-icon {
       background: var(--contrast100);
-      margin-right: $length12;
-    }
-
-    .name {
-      flex-grow: 1;
     }
 
     .total {
