--- a/src/app/transactions/transaction/transaction-form/transaction-category-select/transaction-category-select.component.scss
+++ b/src/app/transactions/transaction/transaction-form/transaction-category-select/transaction-category-select.component.scss
@@ -30,14 +30,6 @@
           background: var(--contrast100);
         }
       }
-
-      app-svg-icon {
-        margin-right: $length12;
-      }
-
-      .name {
-        flex-grow: 1;
-      }
     }
   }
 }
